Fix responsive styling of title to work on narrow new phones

--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,7 @@ border: 0;
      }
      #pageTitle
      {
-          font-size: 44pt;
+          font-size: 38pt;
      }
      .sideProject:hover
      {
